Use URI instead of URL in cmd line compressor